P4-2725 initial commit for searching and updating of locations.

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-
 <div class="govuk-width-container" layout:fragment="content">
-    <h2>Resource not found</h2>
+  <h1 class="govuk-heading-l">Resource not found</h1>
+  <p class="govuk-body">Please try again later. If this issue continues to occur please contact the Book a Secure Move team.</p>
+  <a class="govuk-button" th:href="@{/}" id="continue">OK, continue</a>
 </div>
 </body>
-
 </html>
