--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -33,6 +33,9 @@
                             <li class="moj-primary-navigation__item">
                                 <a class="moj-primary-navigation__link" href="/search-journeys">Manage Journey Price Catalogue</a>
                             </li>
+                            <li class="moj-primary-navigation__item">
+                                <a class="moj-primary-navigation__link" href="/search-locations">Manage Locations</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
