P4-2725 further changes (including some refactoring) to support search and management of schedule 34 locations.

--- a/src/main/resources/templates/search-journeys.html
+++ b/src/main/resources/templates/search-journeys.html
@@ -113,7 +113,7 @@
             toAutocompleteEl = document.querySelector('#to')
           }
         })
-        request.open('GET', 'locations?version=' + (locationData.version || -1))
+        request.open('GET', 'reference/locations?version=' + (locationData.version || -1))
         request.send()
 
   </script>
