P4-2805 initial commit for displaying location (audit) history tab.

--- a/src/main/resources/templates/manage-location.html
+++ b/src/main/resources/templates/manage-location.html
@@ -11,74 +11,117 @@
 
 <div class="govuk-width-container" layout:fragment="content">
 
-    <form th:action="@{/manage-location}" th:object="${form}" method="post">
+  <a href="/search-locations" class="govuk-back-link">Back</a>
+
+  <div class="govuk-tabs" data-module="govuk-tabs">
+    <h2 class="govuk-tabs__title">
+      Contents
+    </h2>
+    <ul class="govuk-tabs__list">
+      <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+        <a class="govuk-tabs__tab" href="#update-location">
+          Update location
+        </a>
+      </li>
+      <li class="govuk-tabs__list-item">
+        <a class="govuk-tabs__tab" href="#location-history">
+          Location history
+        </a>
+      </li>
+    </ul>
+    <div class="govuk-tabs__panel" id="update-location">
+      <form th:action="@{/manage-location}" th:object="${form}" method="post">
         <div class="govuk-error-summary mv3" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
              data-module="govuk-error-summary" th:if="${#fields.hasErrors('*')}">
-            <h2 class="govuk-error-summary__title" id="error-summary-title">
-                There is a problem
-            </h2>
-            <div class="govuk-error-summary__body">
-                <ul class="govuk-list govuk-error-summary__list">
-                    <li>
-                        <a href="#location-name" th:errors="*">Error</a>
-                    </li>
-                </ul>
-            </div>
+          <h2 class="govuk-error-summary__title" id="error-summary-title">
+            There is a problem
+          </h2>
+          <div class="govuk-error-summary__body">
+            <ul class="govuk-list govuk-error-summary__list">
+              <li>
+                <a href="#location-name" th:errors="*">Error</a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="mv4">
-            <h1 class="govuk-heading-xl mv2" th:inline="text">Update location</h1>
-            <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Update Schedule 34 location.</p>
+          <h2 class="govuk-heading-xl mv2" th:inline="text">Update location</h2>
+          <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Update Schedule 34 location.</p>
         </div>
 
 
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('*')} ? 'govuk-form-group--error'">
-            <ol class="list pl0">
-                <li class="mv3">
-                  <p class="govuk-label govuk-body govuk-!-font-weight-bold">NOMIS Location Name</p>
-                  <p th:text="*{nomisLocationName}" class="govuk-body ma0"></p>
-                  <input type="hidden" th:field="*{nomisLocationName}" class="dn"/>
-                </li>
-                <li class="mv3">
-                  <p class="govuk-label govuk-body govuk-!-font-weight-bold">NOMIS Agency ID</p>
-                  <p th:text="*{agencyId}" class="govuk-body ma0"></p>
-                  <input type="hidden" th:field="*{agencyId}" class="dn"/>
-                </li>
-                <li class="mv3">
-                    <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-name">Maps to Schedule
-                        34 location</label>
-                    <p th:if="${#fields.hasErrors('*')}" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> <span th:errors="*"></span>
-                    </p>
-                    <input class="govuk-input govuk-input--width-20" id="location-name" name="location-name" type="text"
-                           th:field="*{locationName}"
-                           th:classappend="${#fields.hasErrors('locationName')} ? 'govuk-input--error'">
-                </li>
-                <li class="mv3">
-                    <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-type-id">Add location type</label>
-                    <select name="location-type" id="location-type-id" th:field="*{locationType}" class="govuk-select">
-                        <option th:each="type : ${T(uk.gov.justice.digital.hmpps.pecs.jpc.location.LocationType).values()}"
-                                th:value="${type}"
-                                th:text="${type.label}">type
-                        </option>
-                    </select>
-                </li>
-            </ol>
+          <ol class="list pl0">
+            <li class="mv3">
+              <p class="govuk-label govuk-body govuk-!-font-weight-bold">NOMIS Location Name</p>
+              <p th:text="*{nomisLocationName}" class="govuk-body ma0"></p>
+              <input type="hidden" th:field="*{nomisLocationName}" class="dn"/>
+            </li>
+            <li class="mv3">
+              <p class="govuk-label govuk-body govuk-!-font-weight-bold">NOMIS Agency ID</p>
+              <p th:text="*{agencyId}" class="govuk-body ma0"></p>
+              <input type="hidden" th:field="*{agencyId}" class="dn"/>
+            </li>
+            <li class="mv3">
+              <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-name">Maps to Schedule
+                34 location</label>
+              <p th:if="${#fields.hasErrors('*')}" class="govuk-error-message">
+                <span class="govuk-visually-hidden">Error:</span> <span th:errors="*"></span>
+              </p>
+              <input class="govuk-input govuk-input--width-20" id="location-name" name="location-name" type="text"
+                     th:field="*{locationName}"
+                     th:classappend="${#fields.hasErrors('locationName')} ? 'govuk-input--error'">
+            </li>
+            <li class="mv3">
+              <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="location-type-id">Add location type</label>
+              <select name="location-type" id="location-type-id" th:field="*{locationType}" class="govuk-select">
+                <option th:each="type : ${T(uk.gov.justice.digital.hmpps.pecs.jpc.location.LocationType).values()}"
+                        th:value="${type}"
+                        th:text="${type.label}">type
+                </option>
+              </select>
+            </li>
+          </ol>
         </div>
         <div class="govuk-warning-text mv3">
-            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                <span th:inline="text">Mapping a Schedule 34 location name will not update location names in NOMIS.</span>
-            </strong>
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            <span th:inline="text">Mapping a Schedule 34 location name will not update location names in NOMIS.</span>
+          </strong>
         </div>
         <div class="flex items-center">
-            <button class="govuk-button mv3 mr3" data-module="govuk-button">
-                Confirm and save
-            </button>
-            <a href="/search-locations" class="govuk-link">Cancel</a>
+          <button class="govuk-button mv3 mr3" data-module="govuk-button">
+            Confirm and save
+          </button>
+          <a href="/search-locations" class="govuk-link">Cancel</a>
         </div>
-    </form>
+      </form>
+    </div>
+
+    <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="location-history">
+      <h2 class="govuk-heading-l">Location history</h2>
+      <table class="govuk-table">
+        <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header">Date</th>
+          <th scope="col" class="govuk-table__header">Time</th>
+          <th scope="col" class="govuk-table__header">Action</th>
+          <th scope="col" class="govuk-table__header">By</th>
+        </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+        <tr class="govuk-table__row" th:each="event: ${history}">
+          <td class="govuk-table__cell" scope="row" th:inline="text">[[${#temporals.format(event.datetime, 'dd MMMM yyyy')}]]</td>
+          <td class="govuk-table__cell" scope="row" th:inline="text">[[${#temporals.format(event.datetime, 'HH:mm a')}]]</td>
+          <td class="govuk-table__cell" scope="row" th:inline="text">[[${event.action}]]</td>
+          <td class="govuk-table__cell" scope="row" th:inline="text">[[${event.by}]]</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
 </body>
 
