--- a/src/main/resources/templates/fragments/summary.html
+++ b/src/main/resources/templates/fragments/summary.html
@@ -22,7 +22,7 @@
         </li>
         <li th:if="${summary.moveType != null}" class="w-third pv2 mv2">
             <p class="govuk-body govuk-!-font-weight-bold white ma0">Move Type</p>
-            <div><p class="govuk-heading-m white ma0 pt1" th:text="${summary.moveType.text}">${summary.moveType.text}</p></div>
+            <div><p class="govuk-heading-m white ma0 pt1" th:text="${summary.moveType.label}">${summary.moveType.label}</p></div>
         </li>
     </ul>
 
