--- a/src/main/resources/templates/search-journeys.html
+++ b/src/main/resources/templates/search-journeys.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="flex items-center">
-      <button class="govuk-button mv3 mr3" data-module="govuk-button">
+      <button id="find-journeys" class="govuk-button mv3 mr3" data-module="govuk-button">
         Find Journeys
       </button>
       <a href="/dashboard" class="govuk-link">Cancel</a>
