--- a/src/main/resources/templates/update-price.html
+++ b/src/main/resources/templates/update-price.html
@@ -90,7 +90,7 @@
           </strong>
         </div>
         <div class="flex items-center">
-          <button class="govuk-button mv3 mr3" data-module="govuk-button">
+          <button id="confirm-save-price" class="govuk-button mv3 mr3" data-module="govuk-button">
             Confirm and save
           </button>
           <a th:href="${cancelLink}" class="govuk-link">Cancel</a>
