--- a/src/main/resources/templates/add-price.html
+++ b/src/main/resources/templates/add-price.html
@@ -72,7 +72,7 @@
             </strong>
         </div>
         <div class="flex items-center">
-            <button class="govuk-button mv3 mr3" data-module="govuk-button">
+            <button id="confirm-save-price" class="govuk-button mv3 mr3" data-module="govuk-button">
                 Confirm and save
             </button>
             <a href="/journeys" class="govuk-link">Cancel</a>
