P4-2694 new integration test coverage for add and update NOMIS locations.

--- a/src/main/resources/templates/add-location.html
+++ b/src/main/resources/templates/add-location.html
@@ -74,7 +74,7 @@
             </strong>
         </div>
         <div class="flex items-center">
-            <button class="govuk-button mv3 mr3" data-module="govuk-button">
+            <button id="confirm-save-location" class="govuk-button mv3 mr3" data-module="govuk-button">
                 Confirm and save
             </button>
             <a href="/journeys" class="govuk-link">Cancel</a>
