--- a/src/main/resources/templates/search-locations.html
+++ b/src/main/resources/templates/search-locations.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="flex items-center">
-      <button class="govuk-button mv3 mr3" data-module="govuk-button">
+      <button id="find-location" class="govuk-button mv3 mr3" data-module="govuk-button">
         Find Location
       </button>
       <a href="/dashboard" class="govuk-link">Cancel</a>
