P4-2966 first cut of integration test to search for a move and display its details.

--- a/src/main/resources/templates/find-move.html
+++ b/src/main/resources/templates/find-move.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="flex items-center">
-            <button class="govuk-button mv3 mr3" data-module="govuk-button">
+            <button id="find-move" class="govuk-button mv3 mr3" data-module="govuk-button">
                 Find Move
             </button>
             <a href="/dashboard" class="govuk-link">Cancel</a>
