P4-3096 minor styling changes around the 'Find journeys' link.

--- a/src/main/resources/templates/manage-journey-price-catalogue.html
+++ b/src/main/resources/templates/manage-journey-price-catalogue.html
@@ -16,10 +16,21 @@
     </h1>
   </div>
 
-  <div class="govuk-width-container">
-    <a href="/search-journeys" class="govuk-heading-s govuk-link">Find journeys</a>
-    <span>Search and edit individual journey prices</span>
-  </div>
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
+      <tr class="govuk-table__row">
+        <th class="govuk-table__header" scope="col" aria-sort="none"></th>
+      </tr>
+    </thead>
+    <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <td class="govuk-table__cell" scope="row">
+        <a href="/search-journeys" class="govuk-heading-s govuk-link--no-visited-state">Find journeys</a>
+        Search and edit individual journey prices
+      </td>
+    </tr>
+    </tbody>
+  </table>
 </div>
 
 </body>
