P4-3097 small refactoring of link name to be consistent with rest of application.

--- a/src/main/resources/templates/search-journeys-results.html
+++ b/src/main/resources/templates/search-journeys-results.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="mv4">
-        <a href="/search-journeys" class="govuk-link govuk-heading-s ma0">Search journeys</a>
+        <a href="/search-journeys" class="govuk-link govuk-heading-s ma0">Find journeys</a>
     </div>
 
     <section class="mt3">
