--- a/src/main/resources/templates/manage-journey-price-catalogue.html
+++ b/src/main/resources/templates/manage-journey-price-catalogue.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/base}">
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layout/base}">
 
 <head>
   <title>Calculate Journey Variable Payments - GOV.UK</title>
@@ -26,9 +30,16 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">
         <a href="/search-journeys" class="govuk-heading-s govuk-link--no-visited-state">Find journeys</a>
-        Search and edit individual journey prices
+        Search and edit individual journey prices.
       </td>
     </tr>
+    <div sec:authorize="hasRole('ROLE_PECS_MAINTAIN_PRICE')">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell" scope="row">
+          <a href="/annual-price-adjustment" class="govuk-heading-s govuk-link--no-visited-state">Apply bulk price adjustment</a>
+          Make pricing adjustments to the entire catalogue.
+        </td>
+    </div>
     </tbody>
   </table>
 </div>
