--- a/src/main/resources/templates/search-journeys.html
+++ b/src/main/resources/templates/search-journeys.html
@@ -10,11 +10,7 @@
 
 <body>
 <div class="govuk-width-container" layout:fragment="content">
-  <div class="mv4">
-    <h1 class="govuk-heading-xl mv2" th:inline="text">
-      Manage Journey Price Catalogue [[${contractualYearStart}]] to [[${contractualYearEnd}]]
-    </h1>
-  </div>
+  <div th:insert="fragments/contractual-year.html :: contractualYear"></div>
 
   <h2 class="govuk-heading-l mv2 pt3">Find Journeys</h2>
   <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">
