--- a/src/main/resources/templates/annual-price-adjustment.html
+++ b/src/main/resources/templates/annual-price-adjustment.html
@@ -24,7 +24,7 @@
       </li>
     </ul>
     <div class="govuk-tabs__panel" id="annual-price-adjustment">
-      <form th:action="@{/apply-annual-price-adjustment}" th:object="${form}" method="post">
+      <form th:action="@{/annual-price-adjustment}" th:object="${form}" method="post">
         <div>
           <h2 class="govuk-heading-l" th:inline="text">Apply bulk price adjustment</h2>
           <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">
@@ -38,7 +38,7 @@
               <div id="price-hint" class="govuk-hint">Example 1.5</div>
               <p th:if="${#fields.hasErrors('rate')}" class="govuk-error-message">
                 <span class="govuk-visually-hidden">Error:</span>
-                Enter a valid price adjustment in the correct format
+                Enter a valid price adjustment greater than zero in the correct format ###.###
               </p>
               <div class="govuk-input__wrapper">
                 <div class="govuk-input__prefix" aria-hidden="true">£</div>
