--- a/src/main/resources/templates/annual-price-adjustment.html
+++ b/src/main/resources/templates/annual-price-adjustment.html
@@ -33,18 +33,31 @@
         </div>
         <div class="govuk-form-group" th:classappend="${#fields.hasErrors('rate')} ? 'govuk-form-group--error'">
           <ol class="list pl0">
-            <li class="mv1">
+            <li class="mv3">
               <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="rate">Rate</label>
-              <div id="price-hint" class="govuk-hint">Example 1.5</div>
+              <div id="rate-hint" class="govuk-hint">Example 1.5</div>
               <p th:if="${#fields.hasErrors('rate')}" class="govuk-error-message">
                 <span class="govuk-visually-hidden">Error:</span>
                 Enter a valid price adjustment greater than zero in the correct format ###.###
               </p>
               <div class="govuk-input__wrapper">
                 <div class="govuk-input__prefix" aria-hidden="true">£</div>
-                <input class="govuk-input govuk-input--width-5" id="rate" name="price" type="text"
-                       aria-describedby="price-hint" th:field="*{rate}"
+                <input class="govuk-input govuk-input--width-5" id="rate" name="rate" type="text"
+                       aria-describedby="rate-hint" th:field="*{rate}"
                        th:classappend="${#fields.hasErrors('rate')} ? 'govuk-input--error'">
+              </div>
+            </li>
+            <li class="mv3">
+              <div class="govuk-form-group">
+                <h1 class="govuk-label-wrapper">
+                  <label class="govuk-label govuk-body govuk-!-font-weight-bold" for="details">Give Details</label>
+                </h1>
+                <p th:if="${#fields.hasErrors('details')}" class="govuk-error-message">
+                  <span class="govuk-visually-hidden">Error:</span>
+                  Please give details for the bulk price adjustment
+                </p>
+                <textarea class="govuk-textarea" id="details" name="more-detail" rows="5" aria-describedby="details-hint" th:field="*{details}"
+                          maxlength="255" th:classappend="${#fields.hasErrors('details')} ? 'govuk-input--error'"></textarea>
               </div>
             </li>
           </ol>
